--- a/manifest.json
+++ b/manifest.json
@@ -25,9 +25,7 @@
     ],
     "permissions": [
         "activeTab",
-        "tabs",
-        "scripting",
-        "offscreen"
+        "scripting"
     ],
     "action": {
         "default_popup": "popup.html"
